test/fail/match_on_set.ma
data A : Set {}
data B : Set {}

fun bla : Set -> Set
{
  bla A = B;
  bla B = A
}
